# LCM4ESP32

./: deploy.md  sdkconfig
components/homekit/: CMakeLists.txt
examples/homekit_led_ota/: CMakeLists.txt
examples/homekit_led_ota/main/: CMakeLists.txt  idf_component.yml  main.c  ota-api.c  ota-api.h
homekit integration/: esp-homekit-instructions.md  ota-api.c
main/: CMakeLists.txt  form_urlencoded.c  main.c  ota.c  udplogger.c  udplogger.h  wifi_config.c
